--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "bin-dir": "bin"
     },
     "require": {
-        "php": ">=5.3.3",
+        "php": "^7|8.0.*",
         "doctrine/annotations": "*"
     },
     "require-dev": {
